--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"rollup-plugin-svelte": "^7.1.0",
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-visualizer": "^5.5.4",
-		"svelte": "^3.46.4"
+		"svelte": "^3.46.4",
+		"cssnano",
+		"svgo"
 	},
 	"dependencies": {
 		"dayjs": "^1.10.7",
