--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		"rollup-plugin-terser": "^7.0.2",
 		"rollup-plugin-visualizer": "^5.5.4",
 		"svelte": "^3.46.4",
-		"cssnano",
-		"svgo"
+		"cssnano": "^5.1.14",
+		"svgo": "^3.0.2"
 	},
 	"dependencies": {
 		"dayjs": "^1.10.7",
